--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bulma-stylus": "^0.8.0",
     "hexo": "^6.1.0",
+    "hexo-component-inferno": "^1.1.0",
     "hexo-deployer-git": "^3.0.0",
     "hexo-filter-flowchart": "^1.0.4",
     "hexo-filter-github-emojis": "^3.0.4",
@@ -31,8 +32,6 @@
     "hexo-renderer-pug": "^3.0.0",
     "hexo-renderer-sass": "^0.4.0",
     "hexo-renderer-stylus": "^2.0.0",
-    "hexo-server": "^3.0.0",
-    "hexo-theme-icarus": "^5.0.0-rc.1",
-    "hexo-theme-landscape": "^0.0.3"
+    "hexo-server": "^3.0.0"
   }
 }
