--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -160,10 +160,22 @@ search:
     type: insight
 # Comment plugin configurations
 # https://ppoffice.github.io/hexo-theme-icarus/categories/Plugins/Comment/
-# comment:
-#     type: disqus
-#     # Disqus shortname
-#     shortname: ''
+comment:
+    type: gitalk
+    client_id: 72166614883c67c948a9
+    client_secret: 4ffcafe5e15ed3056e1d35e84dd6f45619d6a606
+    repo: https://github.com/industriousonesoft/myblogs
+    owner: industriousonesoft
+    admin:
+        - industriousonesoft
+    per_page: 20                    # 可选填
+    distraction_free_mode: false    # 可选填
+    pager_direction: last           # 可选填
+    create_issue_manually: false    # 可选填
+    proxy:                          # 可选填
+    flip_move_options:              # 可选填
+    enable_hotkey: true             # 可选填
+    language: zh-CN                 # 可选填
 # Donate plugin configurations
 # https://ppoffice.github.io/hexo-theme-icarus/categories/Plugins/Donation/
 # donates:
