--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -15,7 +15,7 @@ head:
         name: MarkCao's blog
         # The displayed name of the web application
         # when there is not enough space to display full name
-        short_name: 
+        short_name: MarkCao
         # The start URL of the web application
         start_url: 
         # The default theme color for the application
