--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -109,7 +109,7 @@ navbar:
         Archives: /archives
         Categories: /categories
         Tags: /tags
-        About: /about
+        About: /resume
     # Links to be shown on the right of the navigation bar
     # links:
     #     Download on GitHub:
